--- a/views/addHome.ejs
+++ b/views/addHome.ejs
@@ -1,7 +1,6 @@
 <%-include("./partials/head")%>
 </head>
-<body>
-  <header><h1> Register your home<h1></h1></header>
+<body class="font-sans" style="font-family: 'Inter', sans-serif;">  <header><h1> Register your home<h1></h1></header>
   <main>
     <form action="/host/airbnb-home" method="POST">
       <label for="housename" >Housename:-</label>
