--- a/views/host/homeAdded.ejs
+++ b/views/host/homeAdded.ejs
@@ -1,6 +1,6 @@
 <%- include("../partials/head")%>
 </head>
-<body>
+<body class="font-sans" style="font-family: 'Inter', sans-serif;">
     <%- include("../partials/nav")%>
  <h1> Home registered successfully<h1>
     <a href="/"> Go to Home</a>
