--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,7 +1,11 @@
 <%- include("./partials/head")%>
 </head>
-<body>
-  <header><h1 style="font-size: 2rem;">Error 404 page not found</h1></header>
-  <a href="/" style="color: red; font-size: 1.5rem;">Go Back to Home</a>
+<body >
+  <header>
+    <h1 class="text-4xl font-bold text-red-600 mb-6 ">Error 404: Page Not Found</h1>
+  </header>
+  <a href="/" class="text-lg text-white bg-red-500 hover:bg-red-700 px-6 py-3 rounded shadow transition duration-200 ">
+    Go Back to Home
+  </a>
 </body>
 </html>
