--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -10,8 +10,8 @@
     <form method="post" action="/login-page" id="loginForm" class="space-y-4">
       <input 
         type="text" 
-        name="username" 
-        placeholder="Enter Email / Name" 
+        name="email" 
+        placeholder="Enter Email " 
         required 
         class="w-full px-4 py-2 border border-red-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-red-400 transition"
       >
